--- a/try_facedetect.ipynb
+++ b/try_facedetect.ipynb
@@ -38,50 +38,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'src_gray' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m faces \u001b[38;5;241m=\u001b[39m face_cascade\u001b[38;5;241m.\u001b[39mdetectMultiScale(\u001b[43msrc_gray\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'src_gray' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "faces = face_cascade.detectMultiScale(src_gray)"
+    "faces = face_cascade.detectMultiScale(src)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'faces' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x, y, w, h \u001b[38;5;129;01min\u001b[39;00m \u001b[43mfaces\u001b[49m:\n\u001b[1;32m      2\u001b[0m     cv2\u001b[38;5;241m.\u001b[39mrectangle(src, (x, y), (x \u001b[38;5;241m+\u001b[39m w, y \u001b[38;5;241m+\u001b[39m h), (\u001b[38;5;241m255\u001b[39m, \u001b[38;5;241m255\u001b[39m, \u001b[38;5;241m255\u001b[39m), \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      3\u001b[0m     face \u001b[38;5;241m=\u001b[39m src[y: y \u001b[38;5;241m+\u001b[39m h, x: x \u001b[38;5;241m+\u001b[39m w]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'faces' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for x, y, w, h in faces:\n",
-    "    cv2.rectangle(src, (x, y), (x + w, y + h), (255, 255, 255), 1)\n",
+    "    cv2.rectangle(src, (x, y), (x + w, y + h), (0, 0, 255), 2)\n",
     "    face = src[y: y + h, x: x + w]\n",
     "    eyes = eye_cascade.detectMultiScale(face)\n",
     "    for (ex, ey, ew, eh) in eyes:\n",
-    "        cv2.rectangle(face, (ex, ey), (ex + ew, ey + eh), (255, 255, 255), 1)"
+    "        cv2.rectangle(face, (ex, ey), (ex + ew, ey + eh), (255, 0, 0), 2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.imwrite('facedetect_color.jpg',src)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
